--- a/css/style_site.css
+++ b/css/style_site.css
@@ -35,7 +35,7 @@ a {
 .hero {
 	height: 100vh;
     width: 100%;
-    background: url(../img/background.gif) no-repeat center center;
+    background: url(../img/background.png) no-repeat center center;
     background-size: cover;
     text-align: center;
     display: flex;
